manifests/sample-app/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: sample-app.dev.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-sample-app
                port:
                  name: http
  tls:
    - hosts:
        - sample-app.dev.example.com
      secretName: sample-app-dev-tls
